# nook-os

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Jenkinsfile  PLAN.md  RBAC.md  README.md  docker-compose.yml  run.sh  test.sh
.github/workflows/: ci.yml  release.yml
charts/nook-control/: Chart.yaml  README.md  values.yaml
charts/nook-control/ci/: e2e-values.yaml  postgres.yaml  validate.sh
charts/nook-control/examples/secrets/: README.md
charts/nook-control/examples/secrets/aws/: README.md  external-secret.yaml  secret-store.yaml
charts/nook-control/examples/secrets/gcp/: README.md  external-secret.yaml  secret-store.yaml
charts/nook-control/examples/secrets/vault/: README.md  external-secret.yaml  secret-store.yaml
charts/nook-control/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-control.yaml  deployment-web.yaml  ingress.yaml  service-agent.yaml  service-control.yaml  service-web.yaml  serviceaccount.yaml
crates/nook-control/: Cargo.toml
crates/nook-control/migrations/: 0001_init.sql  0002_add_person_id.sql  0002_user_tokens.sql  0003_adhoc_sessions.sql  0003_backfill_tenant_members.sql  0004_add_task_archived_at.sql  0004_tenant_cas.sql  0005_invites.sql  0005_node_identity.sql  0006_add_email_verified.sql  0006_local_accounts.sql  0007_email_verification_tokens.sql  0007_node_agent_version.sql  0007_skills.sql  0008_board_labels.sql  0008_mail_sends.sql  0009_column_types.sql  0010_task_comments.sql  0011_task_keys.sql  0012_task_priority_relations.sql  0013_notifications.sql  0014_channel_signing.sql  0015_rbac_scope.sql  0016_visibility_policy.sql  0017_tenant_org_default.sql  0018_rbac_grant.sql  0019_operator_org_manage.sql
crates/nook-control/src/: agent_tls.rs  ca.rs  config.rs  crypto.rs  error.rs  events.rs  lib.rs  main.rs  mcp_backend.rs  openapi.rs  seed.rs  state.rs
crates/nook-control/src/auth/: mod.rs  password.rs  perm.rs  session_guard.rs
crates/nook-control/src/cache/: memory.rs  mod.rs
crates/nook-control/src/mailer/: capture.rs  guard.rs  mod.rs  postmark.rs  smtp.rs
crates/nook-control/src/routes/: auth.rs  boards.rs  dispatcher.rs  dist.rs  events.rs  feedback.rs  gitops.rs  health.rs  invites.rs  join.rs  labels.rs  local_auth.rs  mod.rs  nodes.rs  notes.rs  notifications.rs  oidc_exchange.rs  operator.rs  schedule.rs  sessions.rs  settings.rs  skills.rs  task_detail.rs  task_query.rs  taskwork.rs  tenant_ca.rs  tenants.rs  themes.rs  tokens.rs  vault.rs  verify_email.rs  workspaces.rs
crates/nook-control/src/services/: core.rs  discovery.rs  identity.rs  kanban.rs  local_auth.rs  mod.rs  notify.rs  policy.rs  schedule.rs  secrets.rs  tasks.rs  taskwork.rs
crates/nook-control/src/storage/: disk.rs  mod.rs  s3.rs
crates/nook-control/src/ws/: attach.rs  bus.rs  mod.rs  node.rs  registry.rs  ui.rs
crates/nook-control/tests/: agent_mtls.rs  auth_request_path.rs  local_accounts.rs  mailer_postmark.rs  mailer_smtp.rs  multi_instance.rs  node_enrolment.rs  operator_writes.rs  session_isolation.rs  task_workspace.rs  tenant_ca.rs  tenant_isolation.rs
crates/nook-control/tests/common/: mod.rs
crates/nook-dispatcher/: Cargo.toml
crates/nook-dispatcher/src/: lib.rs
crates/nook-mcp/: Cargo.toml
crates/nook-mcp/src/: lib.rs
crates/nook-node/: Cargo.toml
crates/nook-node/src/: capabilities.rs  certs.rs  cli.rs  config.rs  conn.rs  contexts.rs  device_login.rs  discovery.rs  enroll.rs  gitops.rs  main.rs  pinning.rs  resources.rs  selfupdate.rs  sessions.rs  ssh.rs  style.rs  tmux.rs
crates/nook-node/src/wizard/: generate.rs  hooks.rs  mod.rs  node.rs  server.rs  service.rs  skills.rs  tmux_setup.rs  tty.rs
crates/nook-openapi-gen/: Cargo.toml
crates/nook-openapi-gen/src/: main.rs
crates/nook-proto/: Cargo.toml
crates/nook-proto/src/: lib.rs
crates/nook-types/: Cargo.toml
crates/nook-types/src/: lib.rs
deploy/: apply-schema.sh  enable-agent-mtls.sh  prod-schema-delta.sql
deploy/dev-certs/: agent.crt
deploy/docker/: control.Dockerfile  dev-rust.Dockerfile  nginx.conf.template  node-dev-entrypoint.sh  node-entrypoint.sh  node-prod-entrypoint.sh  node.Dockerfile  web-prod.Dockerfile  web.Dockerfile
deploy/systemd/: nook-node.service
docs/: ci-deploy.md  code-signing.md  secrets-encryption.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.base.json
frontend/apps/desktop/: package.json
frontend/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/apps/desktop/src-tauri/icons/: icon.icns
frontend/apps/desktop/src-tauri/src/: lib.rs  main.rs
frontend/apps/web/: index.html  package.json  vite.config.ts
frontend/apps/web/src/: main.tsx
scripts/: dev-server.sh  gen-types.sh  k8s-e2e.sh
skills/: README.md  install.sh
skills/nook-build/: SKILL.md
skills/nook-review/: SKILL.md
skills/nook-spec/: SKILL.md
skills/nookos/: SKILL.md
