[package]
name = "nook-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nook-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
rmcp = { version = "2", features = ["server", "transport-streamable-http-server"] }
