[package]
name = "nook-openapi-gen"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nook-openapi-gen"
path = "src/main.rs"

[dependencies]
nook-control = { workspace = true }
utoipa = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
