# Kept OUT of the main Cargo workspace on purpose: the Tauri toolchain pulls
# heavy desktop dependencies that would slow every backend build.
[package]
name = "nookos-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "nookos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
