# Kept OUT of the main Cargo workspace on purpose: the Tauri toolchain pulls
# heavy desktop dependencies that would slow every backend build.
[package]
name = "nookos-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The device flow runs HERE rather than in the webview. A browser request from
# `tauri://localhost` to the identity provider would need CORS on the provider;
# a request from Rust needs nothing from anyone.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[lib]
name = "nookos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
